# mediahive

./: CLAUDE.md  Makefile  README.md  TODO.md
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/converters/: __init__.py  image_format.py  image_ico.py  image_resize.py  probe.py  remux.py  transcode.py
backend/app/routers/: bookmarks.py  convert.py  health.py  imports.py  local.py  resources.py  stats.py  tags.py  trash.py
backend/app/schemas/: __init__.py  bookmark.py  common.py  import_.py  resource.py  stats.py  tag.py
backend/app/services/: __init__.py  bookmark_service.py  conversion_service.py  file_service.py  import_service.py  resource_service.py  tag_service.py  trash_service.py
backend/fixtures/: resources.json
backend/tests/: conftest.py  test_bookmarks.py  test_imports.py  test_local.py  test_resources.py  test_smoke.py  test_stats.py  test_tags.py  test_trash.py
docs/: project-structure.md
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/components/: BookmarkModal.vue  ConfirmDialog.vue  CreateTagModal.vue  DepartmentTreeItem.vue  DownloadUrlModal.vue  EditResourceModal.vue  EditTagModal.vue  ImportBookmarksModal.vue  ImportFolderModal.vue  M3u8PlayerModal.vue  NavNotifications.vue  NavSearchModal.vue  NavSettingsDrawer.vue  NavUserMenu.vue  PageBreadcrumb.vue  TagCloud.vue  TestCard.vue  UploadModal.vue  UserFormLayout.vue
frontend/app/composables/: useApiFetch.ts  useBookmarksApi.ts  useConfirmDialog.ts  (+15 more)
(+155 files in other folders)
